# Advanced_Topics_2020b_Ex1

./: Algorithm.cpp  Algorithm.h  CMakeLists.txt  Common.cpp  Common.h  Container.cpp  Container.h  ErrorsInterface.h  Parser.cpp  Parser.h  Port.cpp  Port.h  README.md  ShipPlan.cpp  ShipPlan.h  ShipRoute.cpp  ShipRoute.h  Simulation.cpp  Simulation.h  StowageAlgorithm.cpp  StowageAlgorithm.h  WeightBalanceCalculator.cpp  WeightBalanceCalculator.h  main.cpp  main.h  makefile
